# mgwport

./: AUTHORS  CYGPORT.NEWS  CYGPORT.README  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  groups  mgwport.spec  project.config
MINGW-PATCHES/: README  mingw32-mgwport.xml
data/: Makefile.am  autopoint.patch  mgwport-bash-completion  mgwport.conf  mgwport.nanorc  mgwport.xml  mirrors  sample.mgwport  uac-manifest.in
doc/: Makefile.am  robodoc.rc
lib/: Makefile.am  check_funcs.mgwpart  compilers.mgwpart  config_registry.mgwpart  help.mgwpart  inheritance.mgwpart  pkg_cleanup.mgwpart  pkg_info.mgwpart  pkg_pkg.mgwpart  relocatable.mgwpart  src_compile.mgwpart  src_fetch.mgwpart  src_install.mgwpart  src_postinst.mgwpart  src_prep.mgwpart  src_test.mgwpart  syntax.mgwpart
mgwclass/: Makefile.am  autotools.mgwclass  cross.mgwclass  cvs.mgwclass  git.mgwclass  relocatable.mgwclass  svn.mgwclass  tcl.mgwclass  toolchain.mgwclass  utils.mgwclass
tests/: Makefile.am  bootstrap  messages
tools/: deb2targz  pkgrip  sysrootize
