dist_pkglib_DATA = \
	check_funcs.mgwpart			\
	compilers.mgwpart			\
	config_registry.mgwpart		\
	help.mgwpart				\
	inheritance.mgwpart			\
	pkg_cleanup.mgwpart			\
	pkg_info.mgwpart			\
	pkg_pkg.mgwpart				\
	src_compile.mgwpart			\
	src_fetch.mgwpart			\
	src_install.mgwpart			\
	src_postinst.mgwpart		\
	src_prep.mgwpart			\
	src_test.mgwpart			\
	relocatable.mgwpart			\
	syntax.mgwpart				\
	$(NULL)
